--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--不显示notification的权限-->
+    <!--调用hideNotification不显示notification需要的权限-->
     <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 
     <application
@@ -23,11 +23,11 @@
             </intent-filter>
         </activity>
 
-        <!--<receiver android:name="com.simplepeng.updaterlibrary.DownloadReceiver">-->
-            <!--<intent-filter >-->
-                <!--<action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <receiver android:name="com.simplepeng.updaterlibrary.DownloadReceiver">
+            <intent-filter >
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
+            </intent-filter>
+        </receiver>
 
     </application>
 
