--- a/updaterlibrary/build.gradle
+++ b/updaterlibrary/build.gradle
@@ -35,9 +35,10 @@ dependencies {
 // 这个version是区分library版本的，因此当我们需要更新library时记得修改这个version
 // 这个version影响后面的引用
 version = "1.0.0"
+
 def siteUrl = 'https://github.com/simplepeng/Updater'   // 项目的主页
 def gitUrl = 'https://github.com/simplepeng/Updater.git'   // Git仓库的url
-group = "simplepeng"            // Maven Group ID for the artifact，一般填你唯一的包名
+group = "com.simplepeng"            // Maven Group ID for the artifact，一般填你唯一的包名
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
