--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.simplepeng.updater"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -26,5 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile project(':updaterlibrary')
+//    compile project(':updaterlibrary')
+    compile 'com.simplepeng:updaterlibrary:1.0.1'
+//    compile 'pub.devrel:easypermissions:0.2.1'
 }
