--- a/updater/build.gradle
+++ b/updater/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    compile 'com.android.support:support-core-utils:23.+'
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.yanzhenjie:permission:2.0.0-rc12'
 }
 
 // 这个version是区分library版本的，因此当我们需要更新library时记得修改这个version
